--- a/frontend/survey/bower.json
+++ b/frontend/survey/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
-    "bootstrap-sass-official": "^3.2.0"
+    "bootstrap-sass-official": "^3.2.0",
+    "restangular": "~1.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
